# badge-maker

./: Cargo.toml
benches/: create_accessible.rs  render_attributes.rs  render_badge.rs  render_text.rs  render_title.rs  xml.rs
src/: main.rs
src/badge/: badge_builder.rs  style.rs
src/badge/color/: parser.rs
src/render/font/: font.rs
src/render/renderers/: logo.rs
src/render/util/: xml.rs
