[package]
name = "badge-maker"
version = "0.3.1"
authors = ["Chris Burgess <cgburgess10@gmail.com>"]
description = "It makes badges."
homepage = "https://github.com/cgbur/badge-maker"
repository = "https://github.com/cgbur/badge-maker"
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["badge", "maker", "svg", "shield"]
include = ["src/", "Cargo.toml", "fonts/verdana-11px-normal.bincode"]

[[bin]]
name = "badge-maker"
required-features = ['cli']

[features]
default = ["cli"]
cli = ["clap"]

[dependencies]
once_cell = "1.19.0"
regex = "1.5.6"
thiserror = "1.0.31"
serde = { version = "1.0.137", features = ["derive"] }
bincode = "1.3.3"
aho-corasick = "1.1.3"
seahash = "4.1.0"
clap = { version = "4.5", features = ["derive"], optional = true }
itoa = "1.0.2"
base64 = "0.22"
[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[dev-dependencies]
criterion = "0.3"
byte-unit = "4.0.9"
itertools = "0.10.0"
